Added header/footer and hero to html.index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul class="header-links">
+            <li>Link One</li>
+            <li>Link Two</li>
+            <li>Link Three</li>
+        </ul>
+    </div>
+    <section class="hero">
+        <div class="hero-content">
+            <h1 class="hero-title">Hero Title</h1>
+            <h2 class="hero-subtitle">Hero Subtitle</h2>
+            <button type="button" class="hero-button">Button</button>
+        </div>
+        <a class="placeholder" href="https://placeholder.com"><img src="https://via.placeholder.com/350x200"></a>
+    </section>
+
+    <div class="footer">
+        Footer 2022
+    </div>
 </body>
 </html>
