Updated index and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
     <div class="header">
         <div class="logo">Header Logo</div>
         <ul class="header-links">
@@ -16,14 +17,65 @@
             <li>Link Three</li>
         </ul>
     </div>
+
     <section class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Hero Title</h1>
-            <h2 class="hero-subtitle">Hero Subtitle</h2>
-            <button type="button" class="hero-button">Button</button>
+            <h2 class="hero-subtitle">This is the hero subtitle</h2>
+            <button type="button" class="hero-button">Sign Up</button>
         </div>
         <a class="placeholder" href="https://placeholder.com"><img src="https://via.placeholder.com/350x200"></a>
     </section>
+
+    <!-- <div class="info">
+        <h1 class="info-title">Some Random Information</h1>
+        <div class="cards">
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+        </div>
+        <div class="card-text">
+            <p>This is some subtext under an illustration or image</p>
+            <p>This is some subtext under an illustration or image</p>
+            <p>This is some subtext under an illustration or image</p>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+    </div> -->
+
+    <h1 class="info-title">Some Random Information</h1>
+    
+    <div class="info">
+        <div>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+        <div>
+            <a class="card" href="https://placeholder.com"><img src="https://via.placeholder.com/200"></a>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+    </div>
+
+    <div class="quote">
+        <h2 class="quote-text">Erlich Bachman, this is you as an old man. I'm ugly and I'm dead. Alone.</h2>
+        <h3 class="quote-source">-Jìan-Yáng </h3>
+    </div>
+
+    <div class="sign-up">
+        <div class="sign-up-text">
+            <h4>Call to action! It's time!</h4>
+            <h5>Sign up for our product by clicking that button right over there!</h5>
+        </div>
+        <button type="button" class="sign-up-button">Sign Up</button>
+    </div>
 
     <div class="footer">
         Footer 2022
